完成了登录功能 完成了基本的layout布局

--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -1,7 +1,7 @@
 @import './icon';
 
 body {
-  background-color: pink;
+  background-color: #f5f7f9;
 }
 
 // 此处注意：如果你的样式不生效，那么原因是因为 vant 中的样式覆盖住了此处的样式
